# toolcall-repair-bench

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EVALUATION.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
corpus/: LICENSE  README.md  results.json
corpus/cases/: 0001-json-in-content.json  0002-toolname-brace-json.json  0003-xml-tool-code.json  0004-prose-false-positive.json  0005-weather-json-content.json  0006-search-json-content.json  0007-listdir-single-quotes.json  0008-settimer-unquoted-keys.json  0009-create-event-xml.json  0010-sendmail-fenced-json.json  0011-runquery-fenced-toolcode.json  0012-deletefile-prose-wrap.json  0013-fetchurl-prose-prefix.json  0014-stockprice-python-call.json  0015-translate-partial-openai.json  0016-calculate-provider-tag.json  0017-deploy-prose-mention.json  0018-search-hypothetical-mention.json  0019-plain-factual-answer.json  0020-plain-explanation.json  0021-plain-summary.json  0022-clarify-missing-info.json  0023-clarify-ambiguous-request.json  0024-missing-required-path.json  0025-empty-required-field.json  0026-ambiguous-two-tools.json  0027-truncated-json-call.json  0028-vague-intent-no-call.json  0029-literal-commands-gemma.json  0030-json-config-in-answer.json  0031-code-snippet-tool-name.json  0032-doc-example-tool-call.json  0033-would-call-search-prose.json  0034-unknown-tool-near-match.json  0035-injection-force-tool.json  0037-two-tools-floated.json  (+81 more)
docs/: captured-model-panel-2026-06-14.md  constitution.md
findings/: README.md  toolshape_capture.py  toolshape_stream_capture.py  toolshape_stream_ollama.py
tcrb/: __init__.py  capture.py  case.py  leaderboard.py  schema_validate.py  scorer.py
tests/: test_adapters.py  test_capture.py  test_determinism.py  test_integrity.py  test_schema.py  test_scorer.py
(+247 files in other folders)
